# mlzoomcamp_capstone_2

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
models/: best_model.joblib  best_model_meta.json
service/: app.py  schemas.py
src/: __init__.py  config.py  data.py  features.py
src/predict/: __init__.py  __main__.py  predictor.py  schemas.py
src/train/: __init__.py  __main__.py  pipeline.py
tests/: test_service.py
